--- a/view/login.html
+++ b/view/login.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../asset/favicon.ico" />
+    <link rel="stylesheet" href="../style/bootstrap.css" />
     <title>Book store</title>
   </head>
   <body class="container-fluid h-100 p-0">
-    
+    <div class="row m-0 justify-content-between">
+      <div
+      style="height: 100vh;"
+        class="col-12 col-sm-12 col-lg-6 p-0 d-flex flex-column justify-content-center align-items-center"
+      >
+        <section class="col-11 col-md-9 col-lg-7">
+          <h2 class="textPrimaryColor fw-bold">Welcome back!</h2>
+          <p class="textSecondaryColor fw-normal">
+            login for another awsome information
+          </p>
+          <form action="">
+            <ul class="p-0">
+              <li class="list-unstyled">
+                <label for="">Email</label><br />
+                <input
+                  class="form-control border-0 w-100 bg-light rounded-2 py-2 ps-3"
+                  type="text"
+                  placeholder="Enter your email"
+                />
+              </li>
+              <li class="list-unstyled mt-3">
+                <label for="">Password</label><br />
+                <input
+                  class="form-control border-0 w-100 bg-light rounded-2 py-2 ps-3"
+                  type="text"
+                  placeholder="Enter your password"
+                />
+              </li>
+              <li class="list-unstyled mt-3">
+                  <input type="checkbox" />
+                  <label for="">Remember me</label>
+              </li>
+              <li class="list-unstyled mt-4">
+                <a href="../index.html"
+                  style="background-color: #033059"
+                  class="btn w-100 py-2 rounded-3 text-light"
+                >
+                  Login
+                </a>
+              </li>
+              <li class="list-unstyled mt-2">
+                <p class="textSecondaryColor">
+                  don't have any account?
+                  <a href="register.html" class="text-decoration-none textPrimaryColor"
+                    >Register</a
+                  >
+                </p>
+              </li>
+            </ul>
+          </form>
+        </section>
+      </div>
+      <div
+        style="
+          height: 100vh !important;
+          background-image: url('../asset/loginBanner.webp');
+          background-size: cover;
+          background-repeat: no-repeat;
+        "
+        class="col-6 d-none d-lg-block p-0"
+      ></div>
+    </div>
   </body>
 </html>
