detail book progress

--- a/view/product.html
+++ b/view/product.html
@@ -159,7 +159,7 @@
               </div>
             </div>
             <a
-              href=""
+              href="bumi.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-6 mt-3"
               >Buy now</a
@@ -460,7 +460,7 @@
                 <h6 class="fw-semibold">Rp50.000</h6>
               </div>
               <h6 class="fw-medium">By Bobo</h6>
-              <h6 class="fw-medium">Stok : 10</h6>
+              <h6 class="fw-medium">Stok : 0</h6>
               <div class="d-flex justify-content-between align-items-end">
                 <div class="d-flex gap-1">
                   <i
@@ -574,7 +574,7 @@
                   <div class="ms-3">
                     <h5 class="fw-bold">Majalah Bobo</h5>
                     <p class="m-0">By Bobo</p>
-                    <p class="m-0">Stok : 10</p>
+                    <p class="m-0">Stok : 0</p>
                     <div class="d-flex gap-1">
                       <i
                         style="color: rgb(255, 229, 32)"
