detail product, done

--- a/view/dosaSoeharto.html
+++ b/view/dosaSoeharto.html
@@ -108,35 +108,33 @@
         <div class="col-12 col-md-5 col-lg-6 col-xl-4 p-0">
           <img
             class="col-sm-8 col-md-12 img-fluid rounded-3 mt-3"
-            src="../asset/bumi.webp"
+            src="../asset/dosaBesarSoeharto.webp"
             alt=""
           />
           <h5 class="fw-bold m-0 mt-3">Tentang Buku</h5>
           <p class="m-0 mt-3">
-            Novel "Bumi" karya Tere Liye adalah sebuah karya sastra yang
-            mengajak pembaca untuk merenung tentang kehidupan, cinta, dan makna
-            eksistensi manusia dalam alam semesta. Dengan gaya narasi yang
-            mendalam dan puitis, Tere Liye mengisahkan perjalanan seorang tokoh
-            utama melalui lika-liku kehidupan, dari kegembiraan hingga
-            penderitaan, serta menggambarkan interaksi kompleks antara manusia
-            dan alam.
+            "10 Dosa Besar Soeharto" merupakan sebuah karya yang mengupas
+            kepemimpinan mantan Presiden Indonesia, Soeharto. Buku ini
+            menyajikan analisis kritis terhadap periode panjang pemerintahannya,
+            mengidentifikasi dan mengulas sepuluh isu utama yang dikaitkan
+            dengan kebijakan, politik, dan dampaknya terhadap masyarakat.
           </p>
-          <p class="fw-semibold m-0 textSecondaryColor mt-3">By : Tere Liye</p>
+          <p class="fw-semibold m-0 textSecondaryColor mt-3">By : Perpustakaan Nasional</p>
           <p class="fw-semibold m-0 textSecondaryColor">
-            Penerbit : Gramedia Pustaka Utama
+            Penerbit : Upaya Warga Jakarta
           </p>
-          <p class="fw-semibold m-0 textSecondaryColor">Tahum Terbit : 2014</p>
+          <p class="fw-semibold m-0 textSecondaryColor">Tahum Terbit : 1998</p>
         </div>
         <div class="col-12 col-md-6 col-lg-5 col-xl-4 p-0 mt-5 mt-md-2">
-          <h1 class="fw-bold m-0 textPrimaryColor">Novel Bumi</h1>
+          <h1 class="fw-bold m-0 textPrimaryColor">10 Dosa Besar Soeharto</h1>
           <div class="d-flex flex-row">
-            <p class="m-0 textSecondaryColor">Terjual 19 rb+</p>
+            <p class="m-0 textSecondaryColor">Terjual 50 rb+</p>
             <i class="bi bi-dot textSecondaryColor"></i>
-            <p class="fw-semibold m-0 textSecondaryColor">Tere Liye</p>
+            <p class="fw-semibold m-0 textSecondaryColor">Perpustakaan Nasional</p>
             <i class="bi bi-dot textSecondaryColor"></i>
-            <p class="m-0 textSecondaryColor">Sisa 34 buku</p>
+            <p class="m-0 textSecondaryColor">Sisa 15 buku</p>
           </div>
-          <h3 class="fw-bold mt-2 textPrimaryColor">Rp50.000</h3>
+          <h3 class="fw-bold mt-2 textPrimaryColor">Rp30.000</h3>
           <div class="mt-3">
             <h5 class="fw-bold m-0">Keterangan Barang</h5>
             <p class="m-0 mt-2">Kondisi : Baru</p>
@@ -150,7 +148,7 @@
           </div>
           <div class="mt-3">
             <h5 class="fw-bold m-0">Ulasan</h5>
-            <p class="m-0">Menampilkan 3 ulasan</p>
+            <p class="m-0">Menampilkan 2 ulasan</p>
             <div>
               <div
                 class="d-flex flex-row justify-content-between align-items-center mt-3"
@@ -159,10 +157,10 @@
                   <img
                     style="width: 40px"
                     class="img-fluid rounded-5"
-                    src="../asset/bumiRate1.webp"
+                    src="../asset/lia.webp"
                     alt=""
                   />
-                  <p class="m-0 fw-semibold ms-2">Louis</p>
+                  <p class="m-0 fw-semibold ms-2">Lia</p>
                 </div>
                 <div>
                   <i
@@ -187,10 +185,7 @@
                   ></i>
                 </div>
               </div>
-              <p class="m-0 mt-1">
-                wow, ketika membacanya, aku merasa sangat terpukau karena terasa
-                seperti tersihir dengan kata-kata yang di tulis dibuku ini
-              </p>
+              <p class="m-0 mt-1">🤯🤯🤯</p>
             </div>
             <div>
               <div
@@ -200,10 +195,10 @@
                   <img
                     style="width: 40px"
                     class="img-fluid rounded-5"
-                    src="../asset/bumiRate2.webp"
+                    src="../asset/pem.webp"
                     alt=""
                   />
-                  <p class="m-0 fw-semibold ms-2">Neville</p>
+                  <p class="m-0 fw-semibold ms-2">Pem</p>
                 </div>
                 <div>
                   <i
@@ -228,47 +223,7 @@
                   ></i>
                 </div>
               </div>
-              <p class="m-0 mt-1">keren</p>
-            </div>
-            <div>
-              <div
-                class="d-flex flex-row justify-content-between align-items-center mt-4"
-              >
-                <div class="d-flex flex-row align-items-center">
-                  <img
-                    style="width: 40px"
-                    class="img-fluid rounded-5"
-                    src="../asset/bumiRate3.webp"
-                    alt=""
-                  />
-                  <p class="m-0 fw-semibold ms-2">Karen</p>
-                </div>
-                <div>
-                  <i
-                    style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-fill m-0 p-0"
-                  ></i>
-                  <i
-                    style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-fill m-0 p-0"
-                  ></i>
-                  <i
-                    style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-fill m-0 p-0"
-                  ></i>
-                  <i
-                    style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-fill m-0 p-0"
-                  ></i>
-                  <i
-                    style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-fill m-0 p-0"
-                  ></i>
-                </div>
-              </div>
-              <p class="m-0 mt-1">
-                buku yang sangat menarik untuk dibaca diwaktu luang 😍🥰
-              </p>
+              <p class="m-0 mt-1">spicles</p>
             </div>
             <div class="mt-4">
               <h5 class="fw-bold m-0">Beri ulasanmu</h5>
@@ -293,18 +248,18 @@
                 <p class="num m-0">0</p>
                 <i style="cursor: pointer" class="plus bi bi-plus fs-5"></i>
               </div>
-              <p class="m-0 ms-3">Stok : <span class="stok">34</span></p>
+              <p class="m-0 ms-3">Stok : <span class="stok">15</span></p>
             </div>
             <p class="m-0 mt-3">Min. Pembelian 1</p>
             <div class="mt-3">
-              <p class="fw-bold m-0 mt-2">Harga : Rp50.000</p>
+              <p class="fw-bold m-0 mt-2">Harga : Rp30.000</p>
               <p class="fw-bold m-0 mt-2">Ongkir : Rp20.500</p>
               <h4 class="fw-bold m-0 mt-2 textPrimaryColor">
-                Total : Rp70.500
+                Total : Rp50.500
               </h4>
             </div>
             <button
-            onclick="showBuyNowPopUp()"
+              onclick="showBuyNowPopUp()"
               style="background: #0e8ed7"
               class="col-12 btn py-2 rounded-3 text-light mt-3 fw-semibold"
             >
@@ -314,11 +269,11 @@
           <h5 class="fw-bold m-0 mt-4">Pilih produk lainnya</h5>
           <div class="d-flex flex-column align-items-center mt-3">
             <div class="col-12 d-flex align-items-center">
-              <img src="../asset/why.webp" alt="" class="col-4 img-fluid" />
+              <img src="../asset/bumi.webp" alt="" class="col-4 img-fluid" />
               <div class="ms-3">
-                <h6 class="fw-bold">Why</h6>
-                <p class="m-0">By YeaRimDang</p>
-                <p class="m-0">Stok : 3</p>
+                <h6 class="fw-bold">Nove Bumi</h6>
+                <p class="m-0">By Tere Liye</p>
+                <p class="m-0">Stok : 34</p>
                 <div class="d-flex gap-1">
                   <i
                     style="color: rgb(255, 229, 32)"
@@ -340,11 +295,12 @@
                     style="color: rgb(255, 229, 32)"
                     class="bi bi-star-fill m-0 p-0"
                   ></i>
-                  <p class="ms-1 m-0 p-0">(6)</p>
+                  <p class="ms-1 m-0 p-0">(74)</p>
                 </div>
               </div>
             </div>
-            <a href="why.html"
+            <a
+              href="bumi.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
@@ -394,14 +350,14 @@
           <div class="d-flex flex-column align-items-center mt-4">
             <div class="col-12 d-flex align-items-center">
               <img
-                src="../asset/dosaBesarSoeharto.webp"
+                src="../asset/why.webp"
                 alt=""
                 class="col-4 img-fluid"
               />
               <div class="ms-3">
-                <h6 class="fw-bold">10 Dosa Besar Soeharto</h6>
-                <p class="m-0">By Perpustakaan Nasional</p>
-                <p class="m-0">Stok : 15</p>
+                <h6 class="fw-bold">Why</h6>
+                <p class="m-0">By YeaRimDang</p>
+                <p class="m-0">Stok : 3</p>
                 <div class="d-flex gap-1">
                   <i
                     style="color: rgb(255, 229, 32)"
@@ -421,13 +377,13 @@
                   ></i>
                   <i
                     style="color: rgb(255, 229, 32)"
-                    class="bi bi-star-half m-0 p-0"
+                    class="bi bi-star-fill m-0 p-0"
                   ></i>
-                  <p class="ms-1 m-0 p-0">(48)</p>
+                  <p class="ms-1 m-0 p-0">(20)</p>
                 </div>
               </div>
             </div>
-            <a href="dosaSoeharto.html"
+            <a href="why.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
