--- a/view/product.html
+++ b/view/product.html
@@ -162,7 +162,7 @@
               href="bumi.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-6 mt-3"
-              >Buy now</a
+              >Buy</a
             >
           </div>
           <div
@@ -242,10 +242,10 @@
               </div>
             </div>
             <a
-              href=""
+              href="why.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-6 mt-3"
-              >Buy now</a
+              >Buy</a
             >
           </div>
           <div
@@ -409,10 +409,10 @@
               </div>
             </div>
             <a
-              href=""
+              href="dosaSoeharto.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-6 mt-3"
-              >Buy now</a
+              >Buy</a
             >
           </div>
           <div
