account page progress

--- a/view/bumi.html
+++ b/view/bumi.html
@@ -46,12 +46,14 @@
             placeholder="Search book"
           />
         </form>
-        <a
-          href="login.html"
-          class="btn bgPrimaryColor rounded-2 py-1 px-4 fw-semibold text-light"
-        >
-          Login
-        </a>
+        <a href="account.html">
+            <img
+              style="width: 45px; cursor: pointer"
+              class="img-fluid rounded-5"
+              src="../asset/developer.webp"
+              alt=""
+            />
+          </a>
       </section>
     </header>
     <header
@@ -73,12 +75,14 @@
             <span class="textSecondaryColor">Store</span>
           </a>
         </div>
-        <div class="col-auto humburger d-flex justify-content-center p-0">
-          <a
-            href="login.html"
-            class="btn bgPrimaryColor rounded-2 py-2 px-3 text-light fw-semibold w-100"
-          >
-            Login
+        <div class="col-auto d-flex justify-content-center p-0">
+          <a href="account.html">
+            <img
+              style="width: 45px; cursor: pointer"
+              class="img-fluid rounded-5"
+              src="../asset/developer.webp"
+              alt=""
+            />
           </a>
         </div>
       </div>
@@ -238,10 +242,10 @@
                   <img
                     style="width: 40px"
                     class="img-fluid rounded-5"
-                    src="../asset/bumiRate3.webp"
+                    src="../asset/bintang.webp"
                     alt=""
                   />
-                  <p class="m-0 fw-semibold ms-2">Karen</p>
+                  <p class="m-0 fw-semibold ms-2">Bintang</p>
                 </div>
                 <div>
                   <i
@@ -267,7 +271,7 @@
                 </div>
               </div>
               <p class="m-0 mt-1">
-                buku yang sangat menarik untuk dibaca diwaktu luang 😍🥰
+                buku yang sangat menarik untuk dibaca sambil futsal 😍🥰
               </p>
             </div>
             <div class="mt-4">
@@ -304,7 +308,7 @@
               </h4>
             </div>
             <button
-            onclick="showBuyNowPopUp()"
+              onclick="showBuyNowPopUp()"
               style="background: #0e8ed7"
               class="col-12 btn py-2 rounded-3 text-light mt-3 fw-semibold"
             >
@@ -344,7 +348,8 @@
                 </div>
               </div>
             </div>
-            <a href="why.html"
+            <a
+              href="why.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
@@ -427,7 +432,8 @@
                 </div>
               </div>
             </div>
-            <a href="dosaSoeharto.html"
+            <a
+              href="dosaSoeharto.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
