--- a/view/dosaSoeharto.html
+++ b/view/dosaSoeharto.html
@@ -46,11 +46,13 @@
             placeholder="Search book"
           />
         </form>
-        <a
-          href="login.html"
-          class="btn bgPrimaryColor rounded-2 py-1 px-4 fw-semibold text-light"
-        >
-          Login
+        <a href="account.html">
+          <img
+            style="width: 45px; cursor: pointer"
+            class="img-fluid rounded-5"
+            src="../asset/developer.webp"
+            alt=""
+          />
         </a>
       </section>
     </header>
@@ -73,12 +75,14 @@
             <span class="textSecondaryColor">Store</span>
           </a>
         </div>
-        <div class="col-auto humburger d-flex justify-content-center p-0">
-          <a
-            href="login.html"
-            class="btn bgPrimaryColor rounded-2 py-2 px-3 text-light fw-semibold w-100"
-          >
-            Login
+        <div class="col-auto d-flex justify-content-center p-0">
+          <a href="account.html">
+            <img
+              style="width: 45px; cursor: pointer"
+              class="img-fluid rounded-5"
+              src="../asset/developer.webp"
+              alt=""
+            />
           </a>
         </div>
       </div>
@@ -119,7 +123,9 @@
             mengidentifikasi dan mengulas sepuluh isu utama yang dikaitkan
             dengan kebijakan, politik, dan dampaknya terhadap masyarakat.
           </p>
-          <p class="fw-semibold m-0 textSecondaryColor mt-3">By : Perpustakaan Nasional</p>
+          <p class="fw-semibold m-0 textSecondaryColor mt-3">
+            By : Perpustakaan Nasional
+          </p>
           <p class="fw-semibold m-0 textSecondaryColor">
             Penerbit : Upaya Warga Jakarta
           </p>
@@ -130,7 +136,9 @@
           <div class="d-flex flex-row">
             <p class="m-0 textSecondaryColor">Terjual 50 rb+</p>
             <i class="bi bi-dot textSecondaryColor"></i>
-            <p class="fw-semibold m-0 textSecondaryColor">Perpustakaan Nasional</p>
+            <p class="fw-semibold m-0 textSecondaryColor">
+              Perpustakaan Nasional
+            </p>
             <i class="bi bi-dot textSecondaryColor"></i>
             <p class="m-0 textSecondaryColor">Sisa 15 buku</p>
           </div>
@@ -349,11 +357,7 @@
           </div>
           <div class="d-flex flex-column align-items-center mt-4">
             <div class="col-12 d-flex align-items-center">
-              <img
-                src="../asset/why.webp"
-                alt=""
-                class="col-4 img-fluid"
-              />
+              <img src="../asset/why.webp" alt="" class="col-4 img-fluid" />
               <div class="ms-3">
                 <h6 class="fw-bold">Why</h6>
                 <p class="m-0">By YeaRimDang</p>
@@ -383,7 +387,8 @@
                 </div>
               </div>
             </div>
-            <a href="why.html"
+            <a
+              href="why.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
