--- a/view/why.html
+++ b/view/why.html
@@ -46,11 +46,13 @@
             placeholder="Search book"
           />
         </form>
-        <a
-          href="login.html"
-          class="btn bgPrimaryColor rounded-2 py-1 px-4 fw-semibold text-light"
-        >
-          Login
+        <a href="account.html">
+          <img
+            style="width: 45px; cursor: pointer"
+            class="img-fluid rounded-5"
+            src="../asset/developer.webp"
+            alt=""
+          />
         </a>
       </section>
     </header>
@@ -73,12 +75,14 @@
             <span class="textSecondaryColor">Store</span>
           </a>
         </div>
-        <div class="col-auto humburger d-flex justify-content-center p-0">
-          <a
-            href="login.html"
-            class="btn bgPrimaryColor rounded-2 py-2 px-3 text-light fw-semibold w-100"
-          >
-            Login
+        <div class="col-auto d-flex justify-content-center p-0">
+          <a href="account.html">
+            <img
+              style="width: 45px; cursor: pointer"
+              class="img-fluid rounded-5"
+              src="../asset/developer.webp"
+              alt=""
+            />
           </a>
         </div>
       </div>
@@ -185,9 +189,7 @@
                   ></i>
                 </div>
               </div>
-              <p class="m-0 mt-1">
-                hebat
-              </p>
+              <p class="m-0 mt-1">hebat</p>
             </div>
             <div>
               <div
@@ -301,7 +303,8 @@
                 </div>
               </div>
             </div>
-            <a href="bumi.html"
+            <a
+              href="bumi.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
@@ -384,7 +387,8 @@
                 </div>
               </div>
             </div>
-            <a href="dosaSoeharto.html"
+            <a
+              href="dosaSoeharto.html"
               style="background: #0e8ed7"
               class="col-12 btn rounded-3 text-light fw-semibold px-4 py-2 mt-3"
             >
