--- a/view/product.html
+++ b/view/product.html
@@ -46,11 +46,13 @@
             placeholder="Search book"
           />
         </form>
-        <a
-          href="login.html"
-          class="btn bgPrimaryColor rounded-2 py-1 px-4 fw-semibold text-light"
-        >
-          Login
+        <a href="account.html">
+          <img
+            style="width: 45px; cursor: pointer"
+            class="img-fluid rounded-5"
+            src="../asset/developer.webp"
+            alt=""
+          />
         </a>
       </section>
     </header>
@@ -73,12 +75,14 @@
             <span class="textSecondaryColor">Store</span>
           </a>
         </div>
-        <div class="col-auto humburger d-flex justify-content-center p-0">
-          <a
-            href="login.html"
-            class="btn bgPrimaryColor rounded-2 py-2 px-3 text-light fw-semibold w-100"
-          >
-            Login
+        <div class="col-auto d-flex justify-content-center p-0">
+          <a href="account.html">
+            <img
+              style="width: 45px; cursor: pointer"
+              class="img-fluid rounded-5"
+              src="../asset/developer.webp"
+              alt=""
+            />
           </a>
         </div>
       </div>
@@ -89,7 +93,9 @@
     >
       <div class="container-lg p-0">
         <div class="row d-flex row mt-4 m-0 px-3 gap-3 gap-lg-5">
-          <div class="d-flex d-lg-none flex-row justify-content-between align-items-center p-0">
+          <div
+            class="d-flex d-lg-none flex-row justify-content-between align-items-center p-0"
+          >
             <form
               action=""
               class="col-10 d-flex flex-row align-items-center border border-1 border-secondary rounded-5 py-2 px-3"
@@ -563,7 +569,9 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div class="d-flex flex-lg-row justify-content-lg-between align-items-lg-center flex-column">
+              <div
+                class="d-flex flex-lg-row justify-content-lg-between align-items-lg-center flex-column"
+              >
                 <div class="d-flex align-items-center">
                   <img
                     style="width: 90px"
