--- a/view/account.html
+++ b/view/account.html
@@ -18,7 +18,7 @@
   <body class="container-fluid h-100 p-0">
     <header
       style="border-color: #0e8ed7 !important; z-index: 5"
-      class="container-fluid bg-light d-none d-xl-flex justify-content-center py-3 border-top border-5 shadow-sm position-fixed"
+      class="container-fluid bg-light d-none d-xl-flex justify-content-center py-3 border-top border-5 shadow-sm"
     >
       <section
         class="container-xxl d-flex flex-row justify-content-between align-items-center"
@@ -61,9 +61,6 @@
                 >LinkedIn</a
               >
             </li>
-            <li class="list-unstyled">
-              <a href="#faq" class="text-decoration-none text-dark">FAQ</a>
-            </li>
           </ul>
         </nav>
         <a
@@ -75,7 +72,7 @@
         </a>
       </section>
     </header>
-    <header style="border-color: #0e8ed7 !important; z-index: 5;" class="container-fluid d-block d-xl-none p-0 px-3 py-3 m-0 bg-light shadow-sm position-fixed border-top border-5">
+    <header style="border-color: #0e8ed7 !important; z-index: 5;" class="container-fluid d-block d-xl-none p-0 px-3 py-3 m-0 bg-light shadow-sm border-top border-5">
       <div class="row flex-row justify-content-between align-items-center p-0 m-0">
         <div class="col-5 col-sm-3 col-md-2 d-flex flex-row align-items-center p-0">
           <img class="col-4 img-fluid" src="../asset/logo.webp" alt="">
@@ -116,9 +113,6 @@
               >
             </li>
             <li class="list-unstyled mt-4">
-              <a href="#faq" class="text-decoration-none text-dark">FAQ</a>
-            </li>
-            <li class="list-unstyled mt-4">
               <a
                 target="_blank"
                 href="https://api.whatsapp.com/send/?phone=%2B6282275338090&text=Halo+joann..+hehehehhe&type=phone_number&app_absent=0"
@@ -130,6 +124,14 @@
         </ul>
       </nav>
     </header>
+    <main class="container-fluid row h-100 d-flex justify-content-center align-items-center p-0 m-0">
+      <div class="col-12 col-sm-8 col-md-5 col-xl-3 d-flex flex-column align-items-center py-5">
+        <img class="col-5 rounded-circle" src="../asset/developer.webp" alt="">
+        <p class="mt-2">joan purba | developer</p>
+        <p class="text-center col-12 mt-5">hola! nice to meet u, im joan n im the developer who create this website for web design competition from politeknik negri bali. enjoy!</p>
+        <p class="mt-5 fw-medium">maaf masih pemula 🙏</p>
+      </div>
+    </main>
     <script src="../js/humburger.js"></script>
   </body>
 </html>
