payment page done

--- a/view/why.html
+++ b/view/why.html
@@ -262,13 +262,13 @@
                 Total : Rp95.500
               </h4>
             </div>
-            <button
-              onclick="showBuyNowPopUp()"
+            <a
+              href="payment.html"
               style="background: #0e8ed7"
               class="col-12 btn py-2 rounded-3 text-light mt-3 fw-semibold"
             >
               Buy Now
-            </button>
+            </a>
           </div>
           <h5 class="fw-bold m-0 mt-4">Pilih produk lainnya</h5>
           <div class="d-flex flex-column align-items-center mt-3">
